async await, weather app

--- a/apis/index.html
+++ b/apis/index.html
@@ -5,6 +5,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="fetchapi.js"></script>
+    <script src="asyncawait.js"></script>
 </body>
 </html>
